--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ maven_group = org.thinkingstudio.foxified_networking
 archives_name = FoxifiedNetworkingAPI
 
 # Minecraft properties
-minecraft_version = 1.21.3
+minecraft_version = 1.21.1
 
 # Dependencies
-neoforge_version = 21.3.31-beta
+neoforge_version = 21.1.79
